# example-react-django

./: .env  RESOURCES.md  docker-compose.yml
backend/: .env  pyproject.toml
backend/backend/: settings.py  urls.py
backend/main/: admin.py  backends.py  models.py  serializers.py  urls.py  views.py
backend/main/management/commands/: generateusers.py
backend/main/migrations/: 0001_initial.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src/api/: client.ts  index.ts  types.ts
frontend/src/hooks/: index.tsx
frontend/src/pages/admin/: Login.tsx  Root.tsx  UsersIndex.tsx
frontend/src/pages/admin/users/: List.tsx  index.tsx
frontend/src/routers/: index.tsx
frontend/src/store/: index.ts
